{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 24,
  "lineage": "1d0a825b-a3db-c2c6-9cbe-0c734bf9b0db",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm1-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf-vm1-nic1",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vm1-pip",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-1"
              }
            ],
            "location": "eastus",
            "name": "tf-vm1-nic1",
            "private_ip_address": "172.16.1.4",
            "private_ip_addresses": [
              "172.16.1.4"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_public_ip.terraform_pip_vm1",
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-1",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm1-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vm1-nic2",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.2.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-left"
              }
            ],
            "location": "eastus",
            "name": "tf1-vm1-nic2",
            "private_ip_address": "172.16.2.5",
            "private_ip_addresses": [
              "172.16.2.5"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-2",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm2-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vm2-nic1",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vm2-pip",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-1"
              }
            ],
            "location": "eastus",
            "name": "tf1-vm2-nic1",
            "private_ip_address": "172.16.1.6",
            "private_ip_addresses": [
              "172.16.1.6"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_public_ip.terraform_pip_vm2",
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-1",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vm2-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vm2-nic2",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.3.5",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-2-subnet-right"
              }
            ],
            "location": "eastus",
            "name": "tf1-vm2-nic2",
            "private_ip_address": "172.16.3.5",
            "private_ip_addresses": [
              "172.16.3.5"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-3",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vsrx-nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vsrx-nic1",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vsrx-pip",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-1"
              }
            ],
            "location": "eastus",
            "name": "tf1-vsrx-nic1",
            "private_ip_address": "172.16.1.5",
            "private_ip_addresses": [
              "172.16.1.5"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_public_ip.terraform_pip_vsrx",
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-1",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vsrx-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vsrx-nic2",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.2.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-left"
              }
            ],
            "location": "eastus",
            "name": "tf1-vsrx-nic2",
            "private_ip_address": "172.16.2.4",
            "private_ip_addresses": [
              "172.16.2.4"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-2",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "tf-vsrx-nic3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": true,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/networkInterfaces/tf1-vsrx-nic3",
            "internal_domain_name_suffix": "zog4jojdezdenek0kfcagfdhoh.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "172.16.3.4",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-2-subnet-right"
              }
            ],
            "location": "eastus",
            "name": "tf1-vsrx-nic3",
            "private_ip_address": "172.16.3.4",
            "private_ip_addresses": [
              "172.16.3.4"
            ],
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_subnet.tf-net-1-subnet-3",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform_pip_vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vm1-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tf-vm1-pip",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "tags": {
              "environment": "tf-pip-vm1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform_pip_vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vm2-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tf-vm2-pip",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "tags": {
              "environment": "tf-pip-vm2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "terraform_pip_vsrx",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/publicIPAddresses/tf-vsrx-pip",
            "idle_timeout_in_minutes": 30,
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tf-vsrx-pip",
            "resource_group_name": "terraform",
            "sku": "Basic",
            "tags": {
              "environment": "tf-pip-vsrx"
            }
          },
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az-rt-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/routeTables/az-rt-1",
            "location": "eastus",
            "name": "az-rt-1",
            "resource_group_name": "terraform",
            "route": [
              {
                "address_prefix": "172.16.3.5/32",
                "name": "route1",
                "next_hop_in_ip_address": "172.16.2.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "az-rt-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": true,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/routeTables/az-rt-2",
            "location": "eastus",
            "name": "az-rt-2",
            "resource_group_name": "terraform",
            "route": [
              {
                "address_prefix": "172.16.2.5/32",
                "name": "route2",
                "next_hop_in_ip_address": "172.16.3.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-net-1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.1.0/24",
            "address_prefixes": [
              "172.16.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-1",
            "name": "tf-net-1-subnet-1",
            "resource_group_name": "terraform",
            "virtual_network_name": "tf-net-1"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-net-1-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.2.0/24",
            "address_prefixes": [
              "172.16.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-left",
            "name": "tf-net-1-subnet-left",
            "resource_group_name": "terraform",
            "virtual_network_name": "tf-net-1"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "tf-net-1-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "172.16.3.0/24",
            "address_prefixes": [
              "172.16.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-2-subnet-right",
            "name": "tf-net-2-subnet-right",
            "resource_group_name": "terraform",
            "virtual_network_name": "tf-net-1"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route1-sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-left",
            "route_table_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/routeTables/az-rt-1",
            "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-1-subnet-left"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_route_table.az-rt-1",
            "azurerm_subnet.tf-net-1-subnet-2",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "route2-sa",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-2-subnet-right",
            "route_table_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/routeTables/az-rt-2",
            "subnet_id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1/subnets/tf-net-2-subnet-right"
          },
          "dependencies": [
            "azurerm_resource_group.terraform",
            "azurerm_route_table.az-rt-2",
            "azurerm_subnet.tf-net-1-subnet-3",
            "azurerm_virtual_network.terraform-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraform-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "172.16.0.0/16"
            ],
            "guid": "b9e48dcb-2623-4646-915a-514403146777",
            "id": "/subscriptions/ee2c9b5c-fa3d-4af1-a1ca-d59355e58d54/resourceGroups/terraform/providers/Microsoft.Network/virtualNetworks/tf-net-1",
            "location": "eastus",
            "name": "tf-net-1",
            "resource_group_name": "terraform"
          },
          "dependencies": [
            "azurerm_resource_group.terraform"
          ]
        }
      ]
    }
  ]
}